samples/_failures_safe/1761174575_98fe08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47c3ee4e.c: In function ‘main’:
./samples/SAFE/__tmp_47c3ee4e.c:169:32: error: expected ‘;’ at end of input
  169 |             print_current_state
      |                                ^
      |                                ;
./samples/SAFE/__tmp_47c3ee4e.c:169:13: error: expected declaration or statement at end of input
  169 |             print_current_state
      |             ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_47c3ee4e.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47c3ee4e.c:169:13: error: expected declaration or statement at end of input
